# llm-eval-harness

./: .gitignore  Dockerfile  README.md  REFERENCES.md  project.yaml  pyproject.toml
.aitmpl/: context-card.md
.github/workflows/: validate.yml
.portfolio-control/: CRITICAL_PATH.md  DECISIONS.md  INVENTORY.md  QUALITY_GATES.md
benchmarks/results/: llm-eval-baseline.json
contracts/: README.md  prediction-artifact.schema.json
data/fixtures/: eval_cases.jsonl  rag-predictions.v1.json  references.jsonl
openspec/: config.yaml
openspec/artifacts/: architecture-record.md  article-draft.md  benchmark-proof.md  component-pack.md  intent.md  portfolio-impact.md  reuse-delta.md  tasks.md  verification.md  voice-check.md
openspec/changes/baseline/: design.md  proposal.md  tasks.md
openspec/changes/baseline/specs/llm-eval-harness/: spec.md
sdd/: agent-handoff.md  architecture-decision.md  benchmark-plan.md  release-checklist.md  reuse-improvement-review.md  spec.md  technical-decision.md
src/llm_eval_harness/: artifacts.py  cli.py  evaluator.py  metrics.py
tests/: test_metrics.py
