[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-eval-harness"
version = "0.2.0"
description = "Artifact-driven local RAG/LLM evaluator with strict ID validation, EM, and token F1."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
llm-eval-harness = "llm_eval_harness.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
